# kilometers-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  API_ENDPOINTS.md  AUTOMATION_PLAN_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  DOCKER_DEVELOPMENT_GUIDE.md  DOCKER_DEV_ENVIRONMENT.md  EXECUTION_REPORT.md  FINAL_AUTOMATION_SUMMARY.md  LICENSE  Makefile  PLUGIN_DEMO_GUIDE.md  PLUGIN_SYSTEM.md  PRIVATE_PLUGINS.md  README copy.md  README.md  README_PLUGIN_SYSTEM.md  README_PLUGIN_SYSTEM_REVISED.md  REFACTORING_PROJECT_SUMMARY.md  TEST_COVERAGE_PLAN.md  WORK_ITEMS.md  build-releases.sh  client.go  config.go  config_test.go  crates.js  demo-plugin-architecture-simple.sh  demo-plugin-architecture.sh  docker-compose.dev.yml  docker-compose.shared.yml  docker-compose.test.yml  go.mod  go.sum  help.html  index.html  init_test.go  (+26 more)
.githooks/: pre-commit
cmd/: main.go  main.go.disabled  monitor.go  root.go
docs/: DEBUG_REPLAY.md  IDE_SETUP.md
integration_test/: api_integration_test.go  cli_test.go  configuration_test.go  debug_replay_test.go  monitor_args_test.go  process_monitoring_test.go  setup_test.go
km/: all.html  index.html  sidebar-items.js
memory-bank/: activeContext.md  deploymentReadiness.md  pluginArchitecture.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
mock_mcp_server/: all.html  fn.handle_request.html  fn.main.html  index.html  sidebar-items.js
scripts/: build-with-plugins.sh  build.sh  demo-plugin-system.sh  demo-plugins.sh  demo-private-plugins.sh  deploy.sh  dev-env.sh  generate-proto.sh  install.ps1  install.sh  integration-test.sh  run-tests.sh  setup-hooks.sh  test-plugin-install.sh  version.sh
search.index/: 0354e893fbfc.js  067767e2821f.js  0c3a89868dbf.js  0ffdbe6d765d.js  160c607c9770.js  2102715c8444.js  272263aead54.js  282a9856992f.js  2ba8f84e04f9.js  31471356cf96.js  3a6755aa649d.js  46d154008970.js  505c14b2eaec.js  5f1077a6f313.js  60233ab7174a.js  665cfaf2f660.js  6667c7d2970d.js  6f32edec1566.js  7754e0949307.js  796b5903a076.js  7e74860d3cd8.js  root.js
src/: auth.rs  cli.rs  config.rs  device_auth.rs  handlers.rs  keyring_token_store.rs  lib.rs  main.rs  proxy.rs  token_cache.rs
test/: README.md  claude_ai_client_requests.jsonl  debug_replay_example.jsonl  mock_api_server.go  mock_mcp_server.go  test-locally.sh  test_claude_ai_replay.sh  test_debug_replay.sh  test_utilities.go
test-data/: manifest-20250819-140222.json
tests/: auth_tests.rs  clear_logs_integration_tests.rs  cli_tests.rs  commands_tests.rs  config_tests.rs  doctor_command_integration_tests.rs  domain_models_tests.rs  event_logging_integration_tests.rs  event_sender_tests.rs  (+20 more)
(+460 files in other folders)
