[package]
name = "km"
version = "0.2.0"
edition = "2021"
description = "MCP proxy for monitoring and telemetry"
license = "MIT"
repository = "https://github.com/kilometers-ai/kilometers-cli"
homepage = "https://kilometers.ai"
authors = ["Kilometers.ai Team"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[[bin]]
name = "km"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
colored = "2.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
dirs = "5.0"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
tokio-test = "0.4"
