[package]
name = "km"
version = "0.1.0"
edition = "2021"

[lib]
name = "km"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
dotenv = "0.15"
envy = "0.4"
uuid = { version = "1.0", features = ["v4"] }
directories = "5"

[dev-dependencies]
tempfile = "3.0"
wiremock = "0.6"
tokio-test = "0.4"
futures = "0.3"
warp = "0.3"
hyper = { version = "0.14", features = ["full"] }